src/embedfs/static/src.css
@import 'tailwindcss';

@source "**/*.{md,html,templ}";

@font-face {
  font-family: InterVariable;
  font-style: normal;
  font-weight: 400 600 700;
  font-display: swap;
  src: url('InterVariable.woff2') format('woff2');
}

@font-face {
  font-family: 'Google Sans Flex';
  font-style: normal;
  font-weight: 500;
  font-display: swap;
  src: url('GoogleSansFlex.woff2') format('woff2');
}

@supports (font-variation-settings: normal) {
  :root {
    font-family: InterVariable, sans-serif;
  }
}

@theme {
  --font-sans: InterVariable, sans-serif;
  --font-sans--font-feature-settings: 'liga' 1, 'calt' 1, 'cv01' 1, 'ss03' 1,
    'tnum' 1; /* fix for Chrome */
  --font-display: 'Google Sans Flex', sans-serif;
  --font-mono: Inconsolata, monospace;

  --color-theme-lighter: #5191fd;
  --color-theme-light: #2575fc;
  --color-theme-dark: #6a11cb;
  --color-theme-darker: #550ea2;
}

@utility btn-common {
  @apply px-4 py-1 rounded-3xl
    cursor-pointer disabled:cursor-not-allowed
    text-sm font-semibold transition-all
    disabled:border-0
    disabled:bg-linear-to-br disabled:from-gray-100 disabled:to-gray-200 disabled:text-gray-400
      disabled:dark:from-gray-800 disabled:dark:to-gray-900 disabled:dark:text-gray-600
    disabled:hover:bg-linear-to-br disabled:hover:from-gray-200 disabled:hover:to-gray-300 disabled:hover:text-gray-400
      disabled:dark:hover:from-gray-800 disabled:dark:hover:to-gray-950 disabled:dark:hover:text-gray-700;
}

@layer base {
  * {
    @apply font-sans;
  }
  body {
    @apply box-border text-sm/8
      bg-slate-100 dark:bg-slate-900
      text-slate-500 dark:text-slate-400
      flex flex-col md:flex-row;
  }
  h1,
  h1 *,
  h2,
  h2 *,
  h3,
  h3 *,
  h4,
  h4 *,
  h5,
  h5 *,
  h6,
  h6 * {
    @apply font-display font-medium text-slate-950 dark:text-slate-200;
  }
  h1 {
    @apply text-3xl my-4;
  }
  h2 {
    @apply text-xl mb-4;
    &:where(:not(:first-child)) {
      @apply mt-6;
    }
  }
  a:link:has(:not(img)) {
    @apply border-b;
  }
  p {
    @apply mb-4;
  }
  ul {
    @apply list-disc my-4 ml-2 pl-4;
  }
  ol {
    @apply list-decimal my-4 ml-2 pl-4;
  }
  li {
    @apply pl-2;
  }
  section {
    @apply rounded-xl border border-solid shadow overflow-x-auto
        p-4 my-4 md:my-8
        bg-white dark:bg-slate-800
        border-slate-200 dark:border-slate-900;
  }
  blockquote {
    @apply my-6 px-6 py-4 rounded-xl max-w-full overflow-x-auto
      text-gray-800 dark:text-blue-200
      bg-blue-50 dark:bg-blue-950;
  }
  pre {
    @apply my-6 px-6 py-4 rounded-xl max-w-full overflow-x-auto text-xs
      text-gray-800 dark:text-blue-200
      bg-blue-50 dark:bg-blue-950;
  }
  table {
    @apply mt-2 mb-4;
  }
  td,
  th {
    @apply text-left align-top p-0.5;
  }
  th {
    @apply px-4 py-2 text-left font-semibold
      text-slate-900 dark:text-slate-100
      border-b-2 border-slate-300 dark:border-slate-600;
  }
  textarea {
    @apply font-mono;
  }
}

@layer components {
  nav {
    @apply bg-black
      relative md:fixed
      overflow-hidden
      md:w-16 md:h-screen
      w-screen h-16
      flex flex-row md:flex-col;

    a:link {
      @apply size-16 border-0 no-underline;
      img {
        @apply size-8 mx-auto my-4;
      }
    }
  }
  main {
    @apply min-w-96 w-full md:w-auto grow
      ml-0 md:ml-20 md:mr-4
      mt-2 md:mt-4
      px-4;
  }
  table {
    th,
    td {
      @apply px-2;
    }
    tr {
      &:nth-child(odd) {
        @apply bg-white dark:bg-slate-800;
        &:hover {
          @apply bg-slate-50 dark:bg-slate-900/50;
        }
      }
      &:nth-child(even) {
        @apply bg-slate-100/90 dark:bg-slate-700/90;
        &:hover {
          @apply bg-slate-50 dark:bg-slate-900/50;
        }
      }
    }
  }
  table.dashboard {
    th.count {
      @apply text-center;
    }
    td.count {
      @apply text-center pt-2 pb-1 align-middle whitespace-nowrap;
      a {
        @apply text-lg font-bold border-0 px-4 py-1 rounded-lg bg-gray-100 dark:bg-gray-900/30;
      }
    }
  }
  .dashboard-index {
    @apply w-full my-8 grid gap-4 md:gap-8 grid-cols-[repeat(auto-fill,minmax(96px,1fr))];
    a {
      @apply block border-0 text-center mx-auto;
      img {
        @apply size-24 bg-slate-800 rounded-xl md:rounded-3xl;
      }
      span {
        @apply block mt-2;
      }
    }
  }
  input,
  textarea,
  select {
    @apply px-3 py-1 appearance-auto
      rounded-lg border shadow
      focus:outline-none focus:ring-1 focus:ring-theme-dark
      text-sm leading-relaxed
      bg-white dark:bg-slate-900
      border-slate-200 dark:border-slate-900
      text-slate-900 dark:text-slate-100;
  }
  .btn-neutral {
    @apply btn-common text-slate-800 dark:text-slate-200
      hover:text-theme-dark
      border border-theme-dark disabled:border-0
      hover:border-theme-lighter hover:dark:border-theme-light;
  }
  .btn-submit {
    @apply btn-common text-white
      bg-linear-to-br from-theme-dark to-theme-darker
      hover:bg-linear-to-br hover:from-theme-light hover:to-theme-dark;
  }
  .btn-delete {
    @apply btn-common text-white
      bg-linear-to-br from-red-500 to-red-400
      dark:bg-linear-to-br dark:from-red-700 dark:to-red-800
      hover:bg-linear-to-br hover:from-red-700 hover:to-red-800
      dark:hover:bg-linear-to-br dark:hover:from-red-500 dark:hover:to-red-600;
  }
  .btn-sharing {
    @apply inline-block p-4 border-0 rounded-full no-underline
      transition-all duration-200 hover:bg-red-400;
    svg {
      @apply size-8;
    }
  }
  .footer-links {
    p,
    ul,
    ol {
      @apply my-2 text-xs;
    }
    a:any-link {
      @apply border-0 hover:border-b transition-all;
    }
  }
  .error-message {
    @apply my-4 p-4 rounded-lg
      bg-red-100 dark:bg-red-900/30
      text-red-800 dark:text-red-200
      border border-red-300 dark:border-red-700;
  }
  .htmx-indicator {
    @apply opacity-0 invisible;
  }
  .htmx-request {
    .htmx-indicator,
    &.htmx-indicator {
      @apply opacity-100 visible;
    }
  }
  aside {
    @apply flex flex-col w-full md:w-64 xl:w-80 md:shrink-0;
    a {
      @apply px-4 py-2 rounded-lg border-0 transition-all
        text-slate-800 dark:text-slate-200
        hover:bg-slate-200 dark:hover:bg-slate-800;
    }
  }
}

